<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reflective Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email
        and password? If yes, complete the fields.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_title_kma">Project\'s average KMA</string>
    <string name="main_average_value">Average value:</string>
    <string name="btn_new_act">Add activity</string>
    <string name="btn_statistics">Statistics</string>
    <string name="title_activity_create">Create Activity</string>
    <string name="create_nm_act">Activity\'s name</string>
    <string name="name">Name</string>
    <string name="prediction">Prediction</string>
    <string name="prediction_time">Time prediction</string>
    <string name="next">Next</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="partially_correct">Partially Correct</string>
    <string name="title_activity_pre_reflection">Pre-Reflection</string>
    <string name="strategy">Strategy</string>
    <string name="attentionDegree">Attention Degree</string>
    <string name="resources">Resources</string>
    <string name="low">Low</string>
    <string name="middle">Middle</string>
    <string name="high">High</string>
    <string name="title_activity_family">Familiarization</string>
    <string name="problem_understand">Problem Understand</string>
    <string name="activity_goal">Activity\'s Goal</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="error_numberpicker">Time prediction required</string>
    <string name="title_activity_post_reflection">Post-Reflection</string>
    <string name="title_activity_production">Production</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="title_activity_stats">Statics</string>
    <string name="text_grade_kmb">Based on the assessment,\n for this activity,\n your KMB score is:</string>
    <string name="text_evaluate_act">Evaluate the results of your activity:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notes">Note</string>
    <string name="birthday">Birthday</string>
    <string name="function">Function</string>
    <string name="text_stats_avg">According to the average of ALL activities,\n your ratings are:</string>
    <string name="kma">KMA</string>
    <string name="kmb">KMB</string>
    <string name="optimistic">Optimistic</string>
    <string name="pessimistic">Pessimistic</string>
    <string name="realistic">Realistic</string>
    <string name="error">Ops, something went wrong</string>
    <string name="msg_user_create">User create successfully</string>
    <string name="msg_act_create">Activity successfully created</string>
    <string name="close_app">Close app</string>
    <string name="close_confirm">Are you sure you want to close this app?</string>
    <string name="msg_back_again">Please click BACK again to exit</string>
    <string name="offline">You are offline</string>
    <string name="offline_msg">Please turn on your internet and came back</string>
    <string name="no_activity_yet">You don\'t have any activity</string>
    <string name="act_list">Act list</string>
    <string name="title_activity_list">List Activity</string>
    <string name="random">Random</string>

    <string-array name="predict_options">
        <item>@string/incorrect</item>
        <item>@string/partially_correct</item>
        <item>@string/correct</item>
    </string-array>
    <string-array name="attention_options">
        <item>@string/low</item>
        <item>@string/middle</item>
        <item>@string/high</item>
    </string-array>

    <!-- CONNECT SERVER STRINGS -->


    <!--<string name="url_server">http://10.70.245.252:8080/webservice</string>-->
    <!-- <string name="url_server">http://10.70.245.252:8080/webservice</string> -->
    <!--<string name="url_server">http://solosofa.com:8080/webservice</string>-->
    <string name="url_server">http://192.168.0.128:8080/webservice</string>

    <string name="url_ws_get_user">/usuario/consultarUsuario</string>
    <string name="url_ws_create_user">/usuario/cadastrarUsuario</string>
    <string name="url_ws_alter_user">/usuario/alterarUsuario</string>
    <string name="url_ws_save_act">/atividade/cadastrarAtividade</string>
    <string name="url_ws_alter_act">/atividade/alterarAtividade</string>
    <string name="url_ws_request_act">/atividade/consultarAtividade</string>
    <string name="url_ws_list_act">/atividade/listarAtividades</string>
    <string name="url_ws_get_avg_kma">/atividade/getKmaMedio</string>
    <string name="url_ws_set_kma_kmb">/atividade/setKmaKmb</string>
    <string name="url_ws_get_avg_kmb">/atividade/getKmbMedio</string>
    <string name="url_ws_get_level">/atividade/getNivel</string>


</resources>
