<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:configChanges="orientation|keyboardHidden">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_kma"
        android:id="@+id/txtMainKMA"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_average_value"
        android:id="@+id/txtKMAStatus"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txtMainKMA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAvgMain"
        android:layout_toEndOf="@+id/txtKMAStatus"
        android:singleLine="true"
        android:minLines="1"
        android:maxLines="1"
        android:textIsSelectable="true"
        android:layout_alignTop="@+id/txtKMAStatus"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_act"
        android:id="@+id/btnNewAct"
        android:layout_below="@+id/txtKMAStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_statistics"
        android:id="@+id/btnStats"
        android:layout_below="@+id/btnNewAct"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gaugeBlue"
        android:src="@drawable/gauge_blue"
        android:layout_above="@+id/txtKMAStatus"
        android:layout_below="@+id/txtMainKMA"
        android:layout_alignEnd="@+id/txtMainKMA"
        android:layout_alignStart="@+id/txtMainKMA" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gaugeGreen"
        android:layout_below="@+id/txtMainKMA"
        android:src="@drawable/gauge_green"
        android:layout_alignBottom="@+id/gaugeBlue"
        android:layout_alignEnd="@+id/txtMainKMA"
        android:layout_alignStart="@+id/txtMainKMA" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gaugeRed"
        android:layout_below="@+id/txtMainKMA"
        android:src="@drawable/gauge_red"
        android:layout_alignBottom="@+id/gaugeBlue"
        android:layout_alignEnd="@+id/txtMainKMA"
        android:layout_alignStart="@+id/txtMainKMA" />

</RelativeLayout>
