<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="assistente.br.ucb.tcc.assistentereflexivo.EvaluationActivity">
    <ScrollView
        android:id="@+id/ScrlViewEval"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_nm_act"
                android:id="@+id/txtActEval"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/inpActEval" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inpActEval"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:layout_below="@+id/txtActEval"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prediction_time"
                android:id="@+id/txtActExe"
                android:layout_above="@+id/inpTimeExe"
                android:layout_alignStart="@+id/inpTimeExe" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inpTimeExe"
                android:layout_above="@+id/txtActPos"
                android:layout_alignStart="@+id/inpActEval"
                android:ems="10"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:text="00:00:00"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time"
                android:id="@+id/txtActPos"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/inpActEval" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inpTimePos"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:layout_below="@+id/txtActPos"
                android:layout_alignLeft="@+id/txtActPos"
                android:text="00:00:00"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_evaluate_act"
                android:id="@+id/txtEvalAct"
                android:layout_below="@+id/inpTimePos"
                android:layout_alignStart="@+id/inpTimePos" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinEvalAct"
                android:layout_below="@+id/txtEvalAct"
                android:layout_alignStart="@+id/txtEvalAct" />
            <ImageButton
                android:id="@+id/btnNextEval"
                android:src="@drawable/ic_action_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinEvalAct"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="58dp"/>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
