<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="assistente.br.ucb.tcc.assistentereflexivo.PreReflectionActivity"
    android:configChanges="orientation|keyboardHidden">

    <ScrollView
        android:id="@+id/ScrlViewPre"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_nm_act"
                android:id="@+id/txtActPre"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/inpNamePre" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inpNamePre"
                android:layout_below="@+id/txtActPre"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="45dp"
                android:clickable="false"
                android:editable="false"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strategy"
                android:id="@+id/txtStrategy"
                android:layout_below="@+id/inpNamePre"
                android:layout_alignStart="@+id/inpNamePre"
                android:layout_marginTop="41dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/inpStrategy"
                android:layout_below="@+id/txtStrategy"
                android:layout_alignStart="@+id/txtStrategy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resources"
                android:id="@+id/txtResources"
                android:layout_below="@+id/inpStrategy"
                android:layout_alignStart="@+id/inpStrategy" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/inpResources"
                android:layout_alignStart="@+id/txtResources"
                android:layout_below="@+id/txtResources"
                android:layout_alignLeft="@+id/inpStrategy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attentionDegree"
                android:id="@+id/txtAttentionDegree"
                android:layout_below="@+id/inpResources"
                android:layout_alignStart="@+id/inpResources"
                android:layout_marginTop="39dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinAttentionDegree"
                android:layout_below="@+id/txtAttentionDegree"
                android:layout_alignStart="@+id/txtAttentionDegree" />

            <ImageButton
                android:id="@+id/btnNextPre"
                android:src="@drawable/ic_action_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinAttentionDegree"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="58dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
