<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="assistente.br.ucb.tcc.assistentereflexivo.PreReflectionActivity"
    android:configChanges="orientation|keyboardHidden">
    <ProgressBar
        android:id="@+id/fam_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>
    <ScrollView
        android:id="@+id/ScrlViewFam"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_nm_act"
                android:id="@+id/txtActFam"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/inpNameFam" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inpNameFam"
                android:layout_below="@+id/txtActFam"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="45dp"
                android:clickable="false"
                android:editable="false"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_understand"
                android:id="@+id/txtProblem"
                android:layout_below="@+id/inpNameFam"
                android:layout_alignStart="@+id/inpNameFam"
                android:layout_marginTop="39dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/inpProblem"
                android:layout_below="@+id/txtProblem"
                android:layout_alignStart="@+id/txtProblem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_goal"
                android:id="@+id/txtActGoal"
                android:layout_below="@+id/inpProblem"
                android:layout_alignStart="@+id/inpProblem" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/inpActGoal"
                android:layout_below="@+id/txtActGoal"
                android:layout_alignStart="@+id/txtActGoal" />

            <ImageButton
                android:id="@+id/btnNextFam"
                android:src="@drawable/ic_action_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inpActGoal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>