<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="assistente.br.ucb.tcc.assistentereflexivo.ProductionActivity"
    android:configChanges="orientation|keyboardHidden">

    <ScrollView
        android:id="@+id/ScrlViewProd"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_nm_act"
                android:id="@+id/txtActPre"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/inpActProd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inpActProd"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:layout_below="@+id/txtActPre"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prediction_time"
                android:id="@+id/txtActExe"
                android:layout_above="@+id/inpTimeExe"
                android:layout_alignStart="@+id/inpTimeExe" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inpTimeExe"
                android:layout_above="@+id/txtActPos"
                android:layout_alignStart="@+id/txtActPos"
                android:ems="10"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:text="00:00:00"/>
            <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chrono"
                android:layout_below="@+id/txtActPos"
                android:layout_alignStart="@+id/inpActProd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time"
                android:id="@+id/txtActPos"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/inpActProd" />

            <ImageButton
                android:id="@+id/btnAddNote"
                android:src="@drawable/ic_action_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chrono"
                android:layout_alignStart="@+id/inpActProd"/>

            <ImageButton
                android:id="@+id/btnPlayPauseTime"
                android:src="@drawable/ic_action_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/btnAddNote" />

            <ImageButton
                android:id="@+id/btnNextProd"
                android:src="@drawable/ic_action_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnPlayPauseTime"
                android:layout_alignEnd="@+id/inpTimeExe" />



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
